# Alfred

./: .gitignore  CMakeLists.txt  Header.cmake  main.cpp
docs/: MakefileCP  conf.py  index.rst
examples/EventManager/: example_EventManager.cpp
examples/Function/: example_Partial.cpp
examples/InfiniteList/: example_InfiniteList_PrimeNumber.cpp
examples/Logger/: example_Logger.cpp
examples/Timer/: example_Timer_SimpleTimer.cpp  example_Timer_Timer.cpp
examples/Utils/: example_Counter.cpp  example_Defer.cpp  example_DynamicLibrary.cpp
src/: config.hpp
src/Alfred/Ecs/: Component.hpp  EcsCounter.hpp  Entity.hpp  Manager.hpp
src/Alfred/EventManager/: EventManager.hpp  EventManagerExceptions.hpp  Manager  Manager.hpp  ManagerDebug.hpp
src/Alfred/Infinite/: InfiniteList.hpp
src/Alfred/Infinite/premade/: InfiniteListPremade.hpp
src/Alfred/Logger/: Logger.hpp
src/Alfred/Math/: Math.hpp  Matrix.hpp
src/Alfred/Network/: AClient.hpp  AServer.hpp  IAuthenticator.hpp  IClient.hpp  IPipeline.hpp  IServer.hpp
src/Alfred/Network/Implem/: ClientTCP.hpp  ServerTCP.hpp  UDP.hpp
src/Alfred/Network/exceptions/: BindFailed.hpp
src/Alfred/Network/premade/: ClientPremade.hpp
src/Alfred/Random/: Random.hpp
src/Alfred/Serializer/: Serializer.hpp
src/Alfred/Serializer/Implementation/: StringSerializer.hpp
src/Alfred/Timer/: Perf  Timer.hpp
src/Alfred/Utils/: Counter.hpp  DynamicLibrary.hpp  MakeFinal.hpp  MapSingleton.hpp  Singleton.hpp
src/AlfredBase/: config.hpp
src/AlfredBase/Async/: AsyncContainer.hpp
src/AlfredBase/Ecs/: Component.hpp  EcsCounter.hpp  Entity.hpp  IComponentStorage.hpp  Manager.hpp  System.hpp
src/AlfredBase/EventManager/: EventManager.hpp  EventManagerString.hpp
src/AlfredBase/Function/: Partial.hpp
src/AlfredBase/Infinite/: InfiniteList.hpp
src/AlfredBase/Infinite/premade/: InfiniteListPremade.hpp
src/AlfredBase/Logger/: Logger.hpp
src/AlfredBase/Math/: Fraction.hpp  Math.hpp  Matrix.hpp  MatrixException.hpp
src/AlfredBase/Network/: AClient.hpp  AServer.hpp  IAuthenticator.hpp  IClient.hpp  IPipeline.hpp  IServer.hpp
src/AlfredBase/Network/Implem/: ClientTCP.hpp  ClientUDP.hpp  ServerTCP.hpp  UDP.hpp
src/AlfredBase/Network/Serializer/: BasicSerializer.hpp
src/AlfredBase/Network/premade/: ClientPremade.hpp
src/AlfredBase/Random/: Random.hpp
src/AlfredBase/Serializer/: Serializer.hpp
src/AlfredBase/Serializer/Implementation/: StringSerializer.hpp
src/AlfredBase/Timer/: SimpleTimer.hpp  Timer.hpp
src/AlfredBase/Utils/: Counter.hpp  Defer.hpp  Directory.hpp  DynamicLibrary.hpp  FindOS.hpp  MapSingleton.hpp  NonCopyable.hpp  Singleton.hpp
src/Async/: AsyncUnorderedMap.hpp  Promise.hpp
src/DecisionTree/: DecisionTree.hpp
src/EventManager/: EventManager.hpp  EventManagerExceptions.hpp
src/InfiniteList/: InfiniteList.hpp
src/InfiniteList/premade/: InfiniteListPremade.hpp
src/Logger/: Logger.cpp  Logger.hpp
src/Math/: Fraction.hpp  Math.hpp  Matrix.hpp  MatrixException.hpp
src/Merkle/: Merkle.hpp
src/Network/: AClient.hpp  AServer.hpp  ClientInfo.hpp  IClient.hpp  INetwork.hpp  ISerializer.hpp  IServer.hpp  IServerClient.hpp
src/Network/Implem/: ClientTCP.hpp  ServerTCP.hpp
src/Network/Unix/: UnixServer.hpp  UnixServerTCP.hpp
src/Network/premade/: ClientPremade.hpp
src/NoType/: moto.hpp
src/Promise/: Promise.hpp
src/Random/: Random.hpp
src/Timer/: Timer.hpp
src/Utils/: Defer.hpp  Singleton.hpp
test/: main.cpp  testClient.cpp  testClient.hpp  testDefer.cpp  testEventManager.cpp  testEventManager2.cpp  testInfiniteList.cpp  testLogger.cpp  testMath.cpp  testMerkle.cpp  testNetwork.cpp  testPromise.cpp  testPromise.cpp_disabled  testRandom.cpp  testSerializer.cpp  testServer.cpp  testServerClient.hpp  testTimer.cpp  test_EventManager.cpp  test_InfiniteList.cpp
test/ecs/: ComponentPosition.hpp  testEcs.cpp
test/server/udp/: TestClientUDP.cpp  TestClientUDP.hpp  TestServerUDP.cpp  TestServerUDP.hpp
